--- a/templates/email_candidates.html
+++ b/templates/email_candidates.html
@@ -5,7 +5,7 @@
 
         <h1>Invite candidate to upload their CV</h1>
 
-        <form class="form-horizontal" action="/email_candidate/{{ candidate.id }}" method="POST">
+        <form class="form-horizontal" action="/email_candidates" method="POST">
             <div class="form-group">
                 <label class="col-sm-2 control-label" for="to">To</label>
                 <div class="col-sm-10">
