--- a/templates/email_candidates.html
+++ b/templates/email_candidates.html
@@ -31,7 +31,7 @@
                 <label class="col-sm-2 control-label" for="message">Message</label>
                 <div class="col-sm-10">
                     <p class="form-control-static">Dear {{ names_list }},</p>
-                    <textarea id="message" name="message" class="form-control" rows=10 autofocus>{{ message  }}</textarea>
+                    <textarea id="message" name="message" class="form-control" rows=12 autofocus>{{ message  }}</textarea>
                     <p class="help-block visible-lg-block visible-md-block hidden-sm hidden-xs">
                         Want some ideas for your letter? See the top tips to the right.
                     </p>
@@ -47,8 +47,8 @@
                 <div class="col-sm-2">
                 </div>
                 <div class="col-sm-10">
-                <button type="submit" class="btn btn-primary">Send email</button>
-            </div>
+                    <button type="submit" class="btn btn-success btn-lg">Send emails</button>
+                </div>
             </div>
         </form>
 
