Follow button is email subscribe

--- a/static/style.css
+++ b/static/style.css
@@ -110,6 +110,12 @@ footer ul.pull-right li:last-child {
     margin-left: 0.5em;
 }
 
+@media (min-width: 768px) { 
+  #follow_constituency {
+    float: right;
+  }
+}
+
 /* /upload_cv */
 
 /* Make file upload button look good */
