Tweak upload copy so it’s a bit more formal

--- a/templates/upload_cv_confirmed.html
+++ b/templates/upload_cv_confirmed.html
@@ -3,7 +3,7 @@
 {% block body %}
     <div id="upload_cv">
 
-        <h1>Hi, {{ candidate.name }}!</h1>
+        <h1>Hello, {{ candidate.name }}</h1>
 
         <p class="lead">Choose your CV to share.</p>
 
