Social sharing tags
Should fix #18

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,6 +2,15 @@
 <html lang="en">
     <head>
         <title>{% block title %}{% endblock %} - Democracy Club CV</title>
+
+        <meta name="description" content="Before you vote, look at their CVs! This site helps MP candidates share their CV with voters." />
+        <meta name="twitter:card" value="summary">
+        <meta property="og:title" content="Democracy Club CV" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="http://cv.democracyclub.org.uk/" />
+        <meta property="og:image" content="http://cv.democracyclub.org.uk/static/dc_logo.png" />
+        <meta property="og:description" content="Before you vote, look at their CVs! This site helps MP candidates share their CV with voters." /> 
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
