Add large logo for Facebook metadata

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
         <meta property="og:title" content="Democracy Club CV" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="http://cv.democracyclub.org.uk/" />
-        <meta property="og:image" content="http://cv.democracyclub.org.uk/static/dc_logo.png" />
+        <meta property="og:image" content="http://cv.democracyclub.org.uk/static/dc_logo_large.png" />
         <meta property="og:description" content="Before you vote, look at their CVs! This site helps MP candidates share their CV with voters." /> 
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
