--- a/templates/layout.html
+++ b/templates/layout.html
@@ -54,7 +54,11 @@
               </p>
 
               <ul class="nav navbar-nav navbar-right">
-                <li> <a href="/clear_postcode">Change constituency</a> </li>
+                {% if g.constituency %}
+                <li> <a href="/candidates">Your constituency</a> </li>
+                {% else %}
+                <li> <a href="/">Choose constituency</a> </li>
+                {% endif %}
                 <li> <a href="/about">About</a> </li>
               </ul>
 
