Your to my constituency

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -55,7 +55,7 @@
 
               <ul class="nav navbar-nav navbar-right">
                 {% if g.constituency %}
-                <li> <a href="/candidates">Your constituency</a> </li>
+                <li> <a href="/candidates">My constituency</a> </li>
                 {% else %}
                 <li> <a href="/">Choose constituency</a> </li>
                 {% endif %}
