--- a/templates/upload_cv_confirmed.html
+++ b/templates/upload_cv_confirmed.html
@@ -3,7 +3,7 @@
 {% block body %}
     <div id="upload_cv">
 
-        <h1>Hello, {{ candidate.name }} <a class="not_me" href="/clear_postcode">That’s not me</a></h1>
+        <h1>Hello, {{ candidate.name }} <a class="not_me" href="/clear_all">That’s not me</a></h1>
 
         <p class="lead">Choose your CV to share.</p>
 
