--- a/templates/upload_cv.html
+++ b/templates/upload_cv.html
@@ -7,6 +7,9 @@
 
         <p class="lead">We'd love it if you would share your CV.</p>
 
+        <p>A CV is a document with a separate, dated section for each job held
+        with title, employer and nature of the role.</p>
+
         <form action="/upload_cv/{{ candidate.id }}" method="POST">
             <div class="form-group">
               <button id="confirm_email" type="submit" class="btn btn-success btn-lg">Share my CV</button>
