--- a/templates/upload_cv_confirmed.html
+++ b/templates/upload_cv_confirmed.html
@@ -7,6 +7,8 @@
 
         <p class="lead">Choose your CV to share.</p>
 
+        <p>When we say CV, we really do mean CV!</p>
+
         <p>A CV is a document with a separate, dated section for each job held
         with title, employer and nature of the role.</p>
 
