Spelling error, candidate told me!

--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -24,7 +24,7 @@
             <input name="email" type="hidden" value="{{from_email}}">
 
             <div class="form-group">
-                <button type="submit" class="btn btn-primary">Follow contituency</button>
+                <button type="submit" class="btn btn-primary">Follow constituency</button>
             </div>
         </form>
         {% endif %}
