--- a/static/style.css
+++ b/static/style.css
@@ -58,21 +58,6 @@ footer ul.pull-right li:last-child {
     margin-bottom: 48px;
 }
 
-/* See http://stackoverflow.com/a/12121929/284340 */
-.frame_small_outer   {width:100%; height:100%;background:#CCC; display: inline-block; }
-.frame_small_inner        {position:relative;}
-.frame_small_inner .ratio {display:block;width:100%;height:auto;}
-.frame_small_inner iframe {position:absolute;top:0;left:0;width:100%; height:100%;}
-
-.link_full_page {
-    margin-bottom: 16px;
-}
-
-#recent_cvs h2 {
-    margin-bottom: 32px;
-}
-
-
 /* /about */
 
 #about {
@@ -150,12 +135,25 @@ footer ul.pull-right li:last-child {
     margin-left: 0.5em;
 }
 
-/* /show_cv */
+/* /show_cv and / */
 
 /* See http://stackoverflow.com/a/12121929/284340 */
 html,body        {height:100%;}
-.frame_outer_wrapper   {width:100%;height:100%;margin:0 auto;background:#CCC;margin-top: 48px;}
+.frame_outer_wrapper   {width:100%;height:100%;background:#CCC;}
 .frame_inner_wrapper        {position:relative;}
 .frame_inner_wrapper .ratio {display:block;width:100%;height:auto;}
 .frame_inner_wrapper iframe {position:absolute;top:0;left:0;width:100%; height:100%;}
+
+.link_full_page {
+    margin-bottom: 16px;
+}
+
+#recent_cvs h2 {
+    margin-bottom: 32px;
+}
+#show_cv h2 {
+    margin-bottom: 48px;
+}
+
+
 
