--- a/templates/index.html
+++ b/templates/index.html
@@ -35,8 +35,8 @@
         <div class="row">
             {% for cv in recent_cvs %}
                 <div class="col-md-6">
-                    <div class="frame_small_outer">
-                        <div class="frame_small_inner">
+                    <div class="frame_outer_wrapper">
+                        <div class="frame_inner_wrapper">
                             <img class="ratio" src="/static/transparent.gif"/>
                             <iframe src="http://docs.google.com/viewer?url={{ cv.url | urlencode}}&amp;embedded=true" frameborder="0" allowfullscreen></iframe>
                         </div>
