--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -15,14 +15,9 @@
         <h1>{{ candidate.name }}'s CV</h1>
         <h2>Candidate for MP of {{ candidate.constituency_name }} </h2>
 
-        <div class="frame_outer_wrapper">
-            <div class="frame_inner_wrapper">
-                <img class="ratio" src="/static/transparent.gif"/>
-                <iframe id="cvframe" src="http://docs.google.com/viewer?url={{ cv.url | urlencode}}&amp;embedded=true" frameborder="0" allowfullscreen></iframe>
-                <!-- CV uploaded: {{ cv.date }} -->
-            </div>
-        </div>
+        {% import 'embed_cv.html' as embed_cv %}
+        {{ embed_cv.embed_cv(cv, full_page_link=False) }}
 
-    </div>
+   </div>
 
 {% endblock %}
