--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,10 @@
             {% endfor %}
         </div>
 
+        <p>
+            <a class="btn-primary btn" href="/all_cvs/page/1">More CVs &hellip;</a>
+        </p>
+
     </div>
 
 {% endblock %}
