Use link not button to get to all CVs

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <p>
-            <a class="btn-primary btn" href="/all_cvs/page/1">More CVs &hellip;</a>
+            <a id="all_cvs_link" href="/all_cvs/page/1">Browse all CVs&hellip;</a>
         </p>
 
     </div>
