Right <title> for All CVs page

--- a/templates/all_cvs.html
+++ b/templates/all_cvs.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %} CVs of MPs {% endblock %}
+{% block title %} All CVs {% endblock %}
 {% block body %}
 {% endblock %}
 
