--- a/templates/upload_cv_confirmed.html
+++ b/templates/upload_cv_confirmed.html
@@ -8,7 +8,8 @@
         <p class="lead">Choose your CV to share.</p>
 
         <p>A CV is a document with a separate, dated section for each job held
-        with title, employer and nature of the role.</p>
+        with title, employer and nature of the role.
+        </p>
 
         <form id="form" method="POST" enctype="multipart/form-data" action="{{ upload_link}}">
           <a class="btn-file btn btn-lg btn-success">
