Just a touch more spacing

--- a/static/style.css
+++ b/static/style.css
@@ -87,6 +87,7 @@ footer ul.pull-right li:last-child {
 }
 .candidate .name {
     font-size: 20px;
+    margin-bottom: 6px;
 }
 .candidate .email_them {
 }
