Better copy on upload page

--- a/templates/upload_cv_confirmed.html
+++ b/templates/upload_cv_confirmed.html
@@ -19,7 +19,15 @@
           </a>
         </form>
 
-        <p>A Word document or a PDF is perfect! Other formats may work too.</p>
+        <p>You can use a variety of formats.</p>
+        
+        <ul>
+            <li>A Word document or a PDF is perfect! </li>
+            <li>Other document formats may work too.</li>
+            <li>LinkedIn profiles can be <a href="https://help.linkedin.com/app/answers/detail/a_id/4281/~/printing-a-profile-and-recommendations">saved as PDF</a> first.
+        </ul>
+
+        <p>If all fails, <a href="/about">email us</a> an attachment.</p>
 
     </div>
 {% endblock %}
