--- a/templates/upload_cv.html
+++ b/templates/upload_cv.html
@@ -6,16 +6,17 @@
         <h1>Hello, {{ candidate.name }}</h1>
 
         <p class="lead">We'd love it if you would share your CV.</p>
+        
+        <p>First, is your email address <strong>{{ candidate.email }}</strong>?</p>
 
         <form action="/upload_cv/{{ candidate.id }}" method="POST">
             <div class="form-group">
-              <button id="confirm_email" type="submit" class="btn btn-success btn-lg">Share my CV</button>
+              <button id="confirm_email" type="submit" class="btn btn-success btn-lg">Confirm email</button>
             </div>
         </form>
 
-        <p>We will send an email to <strong>{{ candidate.email }}</strong>.
-        </p>
-
+        <p>If it's not, please <a href="https://yournextmp.com/person/{{ candidate.id }}">correct it</a> (on YourNextMP) </p>
+        
     </div>
 {% endblock %}
 
