--- a/templates/embed_cv.html
+++ b/templates/embed_cv.html
@@ -2,7 +2,7 @@
     <div class="frame_outer_wrapper">
         <div class="frame_inner_wrapper">
             <img class="ratio" src="/static/transparent.gif"/>
-            <iframe id="cvframe" src="http://docs.google.com/viewer?url={{ cv.url | urlencode}}&amp;embedded=true" frameborder="0" allowfullscreen></iframe>
+            <iframe class="cvframe" src="http://docs.google.com/viewer?url={{ cv.url | urlencode}}&amp;embedded=true" frameborder="0" allowfullscreen></iframe>
             <!-- CV uploaded: {{ cv.date }} -->
         </div>
     </div>
