Rename wide template

--- a/templates/all_cvs.html
+++ b/templates/all_cvs.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %} All CVs {% endblock %}
 
-{% block widebelow %}
+{% block wide %}
     
     <div id="all_cvs">
 
