--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %} {{ constituency.name }} Candidates {% endblock %}
 
-{% block widebelow %}
+{% block wide %}
 
     <div class="candidates">
 
