--- a/templates/layout.html
+++ b/templates/layout.html
@@ -91,7 +91,7 @@
           </div>
           <div class="row">
             <div class="col-xs-12">
-                <div class="widebelowwrap"> {% block widebelow %}{% endblock %} </div>
+                <div class="widewrap"> {% block wide %}{% endblock %} </div>
             </div>
           </div>
 
