--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %} {{ candidate.name }}'s CV, {{ candidate.constituency_name }}, {{ candidate.party}} {% endblock %}
 
-{% block widebelow %}
+{% block wide %}
 
     <div id="show_cv">
 
