--- a/templates/about.html
+++ b/templates/about.html
@@ -56,7 +56,7 @@
         </p>
 
         <p>If you're a programmer, or you like reporting bugs in software,
-        help out on our <a href="https://github.com/frabcus/mpcv">Github repostitory</a>.
+        help out on our <a href="https://github.com/frabcus/mpcv">Github repository</a>.
         </p>
 
 
