--- a/static/style.css
+++ b/static/style.css
@@ -145,12 +145,6 @@ html,body        {height:100%;}
 .frame_inner_wrapper .ratio {display:block;width:100%;height:auto;}
 .frame_inner_wrapper iframe {position:absolute;top:0;left:0;width:100%; height:100%;}
 
-#show_cv .frame_inner_wrapper {
-  position:fixed;
-  left: 0;
-  right: 0;
-}
-
 .link_full_page {
     margin-bottom: 16px;
     text-align: center;
@@ -159,12 +153,6 @@ html,body        {height:100%;}
 
 #recent_cvs h2 {
     margin-bottom: 32px;
-}
-#show_cv h1 {
-    margin-top: 0px;
-}
-#show_cv h3, #all_cvs h1 {
-    margin-bottom: 48px;
 }
 
 #all_cvs_link, #ynmp_link a {
@@ -187,6 +175,15 @@ html,body        {height:100%;}
       padding-left: 40px;
       margin-left: 0px;
   }
+}
+
+#show_cv {
+  height: 100%;
+}
+
+#show_cv iframe {
+  width: 100%;
+  height: 100%;
 }
 
 
