--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -31,9 +31,9 @@
              </span>
           </div>
 
-          <a href="/" class="navbar-brand">
+          <div class="navbar-brand">
              {{ candidate.name }}'s CV
-          </a>
+          </div>
 
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main">
              <span class="sr-only">Toggle navigation</span>
