--- a/templates/embed_cv.html
+++ b/templates/embed_cv.html
@@ -1,8 +1,13 @@
 {% macro embed_cv(cv, full_page_link) %}
-    <iframe class="cvframe" src="http://docs.google.com/viewer?url={{ cv.url | urlencode}}&amp;embedded=true" frameborder="0" allowfullscreen></iframe>
-    <!-- CV uploaded: {{ cv.date }} -->
+    <div class="frame_outer_wrapper">
+        <div class="frame_inner_wrapper">
+            <img class="ratio" src="/static/transparent.gif"/>
+            <iframe class="cvframe" src="http://docs.google.com/viewer?url={{ cv.url | urlencode}}&amp;embedded=true" frameborder="0" allowfullscreen></iframe>
+            <!-- CV uploaded: {{ cv.date }} -->
+        </div>
+    </div>
     {% if full_page_link %}
-        <div class="link_full_page"><a href="/show_cv/{{ cv.person_id }}">View full page</a></div>
+    <div class="link_full_page"><a href="/show_cv/{{ cv.person_id }}">View full page</a></div>
     {% endif %}
 {% endmacro %}
  
