Add a couple of links to about

--- a/templates/about.html
+++ b/templates/about.html
@@ -25,12 +25,13 @@
         <p>To be helpful to voters, so they can choose the best candidate.
         </p>
 
-        <p>Or have a look at newspaper articles on the topic:
+        <p>Or have a look at articles on the topic:
         </p>
         
         <ul>
             <li><a href="http://www.theguardian.com/politics/2015/feb/28/ethics-chief-tell-voters-about-your-second-jobs-general-election-lord-bew-malcolm-rifkind-jack-straw">MP ethics chief: tell voters about your second jobs</a></li>
             <li><a href="http://news.bbc.co.uk/1/hi/uk_politics/8583859.stm">MP hopefuls urged to declare interests</a></li>
+            <li><a href="https://www.gov.uk/advertise-job">Advertise a job with Universal Jobmatch</a></li>
         </ul>
 
         <h2>What's the long term aim?</h2>
@@ -43,10 +44,17 @@
 
         <h2>Who's behind this site?</h2>
 
-        <p>It was first made by <a href="http://flourish.org/">Francis Irving</a>.
+        <p>Julian Todd had the <a href="http://www.theguardian.com/politics/blog/2010/may/04/general-election-2010">original idea</a>
+        back in 2010. He got it from his <a href="https://electionleaflets.org/">election leaflets project</a>.
+        </p>
+
+        <p><a href="http://flourish.org/">Francis Irving</a> made the site.
         He built a large part of the original TheyWorkForYou, back in the day.
-        The flotilla of people at <a href="https://democracyclub.org.uk/about/">Democracy Club</a>
-        help maintain it, and provide infrastructure.
+        </p>
+
+        <p>
+        The flotilla of volunteers at <a href="https://democracyclub.org.uk/about/">Democracy Club</a>
+        help develop and maintain it, and provide infrastructure.
         </p>
 
         <h2>How can I help?</h2>
