Static sitemap for now, add to Webmaster tools

--- a/templates/bumf.html
+++ b/templates/bumf.html
@@ -11,6 +11,8 @@
         <meta property="og:image" content="http://cv.democracyclub.org.uk/static/cv_snip.png" />
         <meta property="og:description" content="Before you vote, look at their CVs! This site helps MP candidates share their CV with voters." /> 
 
+        <meta name="google-site-verification" content="BqbdERfW54g1lnSaq8EHLcBOgwbxxwHTiTUO-7tyFko" />
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
